--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -154,7 +154,7 @@ header {
 
 
 .cardbox {
-    max-width: 1140px;
+    max-width: 1320px;
     flex-shrink: 0;
     border-radius: 10px;
     background: var(--fc-white);
@@ -351,15 +351,15 @@ header {
 }
 
 .padding-top {
-    padding-top: 194px;
+    padding-top: 145px;
 }
 
 .padding-top-2 {
-    padding-top: 165px;
+    padding-top: 100px;
 }
 
 .padding-top-3 {
-    padding-top: 150px;
+    padding-top: 60px;
 }
 
 .dollar {
@@ -567,11 +567,11 @@ header {
 }
 
 .slick-dots li.slick-active button:before {
-    color: var(--fc-orange);
+    color: transparent;
+    background-color: var(--fc-orange);
+    border-radius: 10px;
     width: 45px !important;
-    border-radius: 10px !important;
-    background: var(--fc-orange);
-
+    z-index: 2;
 }
 
 .slick-dots ul li {
@@ -648,7 +648,7 @@ header {
 }
 
 .square-box {
-    max-width: 1140px;
+    max-width: 1320px;
     min-height: 233px;
     flex-shrink: 0;
     border-radius: 10px;
@@ -715,6 +715,17 @@ header {
     background-color: var(--fc-dark-grey);
 }
 
+.svg-circle {
+    /* display: inline-block; */
+    width: 35px;
+    height: 35px;
+    border-radius: 50%;
+    background-color: var(--fc-white);
+    box-shadow: 0px 13px 18px 0px #11132314;
+
+
+}
+
 .vpn2020 {
     font-family: 'Rubik', sans-serif;
     font-size: var(--fs-sm);
@@ -770,7 +781,7 @@ header {
         align-items: center;
         flex-direction: column;
         justify-content: space-between;
-        top: 8px;
+        top: 3px;
         left: 0;
         position: relative;
         z-index: 3;
